k8s/gce-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gce-lb-class # Podes dar o nome que quiseres
spec:
  controller: k8s.io/ingress-gce
