k8s/ingress-gcp.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-google-frontend
#   namespace: ingress-nginx
#   annotations:
#     # Estas annotations AINDA são necessárias porque são específicas do Google (não da classe)
#     kubernetes.io/ingress.global-static-ip-name: "ip-statico-gke"
#     networking.gke.io/managed-certificates: "cert-wfslab"
# spec:
#   ingressClassName: gce-lb-class  # <--- AQUI está a recomendação da doc!
#   defaultBackend:
#     service:
#       name: ingress-nginx-controller
#       port:
#         number: 80
# ---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # OBRIGATÓRIO para o Google LB
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-google-frontend
  namespace: ingress-nginx
  annotations:
    # Estas annotations AINDA são necessárias porque são específicas do Google (não da classe)
    kubernetes.io/ingress.global-static-ip-name: "ip-statico-gke"
    networking.gke.io/managed-certificates: "cert-wfslab"
spec:
  ingressClassName: gce-lb-class  # <--- AQUI está a recomendação da doc!
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        number: 80
